update default config for 10 and 燕子

--- a/default_config.json
+++ b/default_config.json
@@ -160,6 +160,14 @@
         {
             "id": 5381964,
             "name": "高硯晨"
+        },
+        {
+            "id": 6062200,
+            "name": "黃奕霖"
+        },
+        {
+            "id": 5466567,
+            "name": "黃昱燕"
         }
     ]
 }
