update default_config to include 浪k

--- a/default_config.json
+++ b/default_config.json
@@ -19,6 +19,11 @@
             "enable_notify": true
         },
         {
+            "id": 4803750,
+            "name": "浪K歌",
+            "enable_notify": true
+        },
+        {
             "id": 2028726,
             "name": "潘姿怡"
         },
