--- a/default_config.json
+++ b/default_config.json
@@ -1,179 +1,147 @@
 {
     "default_configs": {
-        "check_only": false
+      "check_only": false
     },
     "members": [
-        {
-            "id": 3619520,
-            "name": "李佳俐",
+      {
+        "id": 3619520,
+        "name": "李佳俐",
+        "enable_notify": true
+      },
+      {
+        "id": 3651219,
+        "name": "李采潔",
+        "enable_notify": true
+      },
+      {
+        "id": 3654414,
+        "name": "AKB48 TeamTP",
             "enable_notify": true
-        },
-        {
-            "id": 3651219,
-            "name": "李采潔",
+      },
+      {
+        "id": 4803750,
+        "name": "浪K歌",
             "enable_notify": true
-        },
-        {
-            "id": 3654414,
-            "name": "AKB48 TeamTP",
-            "enable_notify": true
-        },
-        {
-            "id": 4803750,
-            "name": "浪K歌",
-            "enable_notify": true
-        },
-        {
-            "id": 2028726,
-            "name": "潘姿怡"
-        },
-        {
-            "id": 3686708,
-            "name": "劉曉晴"
-        },
-        {
-            "id": 1398860,
-            "name": "蔡伊柔"
-        },
-        {
-            "id": 1985963,
-            "name": "李孟純"
-        },
-        {
-            "id": 3650580,
-            "name": "林倢"
-        },
-        {
-            "id": 3650583,
-            "name": "王逸嘉"
-        },
-        {
-            "id": 3650589,
-            "name": "林易沄"
-        },
-        {
-            "id": 3650590,
-            "name": "高云珏"
-        },
-        {
-            "id": 3650718,
-            "name": "林潔心"
-        },
-        {
-            "id": 3650734,
-            "name": "蔡亞恩"
-        },
-        {
-            "id": 3650735,
-            "name": "周佳郁"
-        },
-        {
-            "id": 3650740,
-            "name": "柏靈"
-        },
-        {
-            "id": 3650741,
-            "name": "賈宜蓁"
-        },
-        {
-            "id": 3650751,
-            "name": "羅瑞婷"
-        },
-        {
-            "id": 3650753,
-            "name": "鄭佳郁"
-        },
-        {
-            "id": 3652111,
-            "name": "張法法"
-        },
-        {
-            "id": 3652550,
-            "name": "陳詩雅"
-        },
-        {
-            "id": 3686707,
-            "name": "邱品涵"
-        },
-        {
-            "id": 3686709,
-            "name": "張羽翎"
-        },
-        {
-            "id": 3686711,
-            "name": "劉語晴"
-        },
-        {
-            "id": 3686713,
-            "name": "林于馨"
-        },
-        {
-            "id": 3687493,
-            "name": "冼迪琦"
-        },
-        {
-            "id": 3793753,
-            "name": "鄭妤葳"
-        },
-        {
-            "id": 3794774,
-            "name": "藤井麻由"
-        },
-        {
-            "id": 3795137,
-            "name": "小山美玲"
-        },
-        {
-            "id": 3800370,
-            "name": "董子瑄"
-        },
-        {
-            "id": 4210533,
-            "name": "吳婉淩"
-        },
-        {
-            "id": 4560592,
-            "name": "國興瑀"
-        },
-        {
-            "id": 4663715,
-            "name": "吳騏卉"
-        },
-        {
-            "id": 4663716,
-            "name": "林佳霓"
-        },
-        {
-            "id": 4663718,
-            "name": "周家安"
-        },
-        {
-            "id": 4663721,
-            "name": "林亭莉"
-        },
-        {
-            "id": 4663722,
-            "name": "翁彤薰"
-        },
-        {
-            "id": 4663724,
-            "name": "宮田留佳"
-        },
-        {
-            "id": 4663738,
-            "name": "袁子筑"
-        },
-        {
-            "id": 5381964,
-            "name": "高硯晨"
-        },
-        {
-            "id": 6062200,
-            "name": "黃奕霖"
-        },
-        {
-            "id": 5466567,
-            "name": "黃昱燕"
-        }
+      },
+      {
+        "id": 2028726,
+        "name": "潘姿怡"
+      },
+      {
+        "id": 3686708,
+        "name": "劉曉晴"
+      },
+      {
+        "id": 1398860,
+        "name": "蔡伊柔"
+      },
+      {
+        "id": 3650580,
+        "name": "林倢"
+      },
+      {
+        "id": 3650583,
+        "name": "王逸嘉"
+      },
+      {
+        "id": 3650589,
+        "name": "林易沄"
+      },
+      {
+        "id": 3650734,
+        "name": "蔡亞恩"
+      },
+      {
+        "id": 3650735,
+        "name": "周佳郁"
+      },
+      {
+        "id": 3652550,
+        "name": "陳詩雅"
+      },
+      {
+        "id": 3686709,
+        "name": "張羽翎"
+      },
+      {
+        "id": 3686713,
+        "name": "林于馨"
+      },
+      {
+        "id": 3800370,
+        "name": "董子瑄"
+      },
+      {
+        "id": 4210533,
+        "name": "吳婉淩"
+      },
+      {
+        "id": 4560592,
+        "name": "國興瑀"
+      },
+      {
+        "id": 4663718,
+        "name": "周家安"
+      },
+      {
+        "id": 4663721,
+        "name": "林亭莉"
+      },
+      {
+        "id": 4663722,
+        "name": "翁彤薰"
+      },
+      {
+        "id": 4663724,
+        "name": "宮田留佳"
+      },
+      {
+        "id": 4663738,
+        "name": "袁子筑"
+      },
+      {
+        "id": 5381964,
+        "name": "高硯晨"
+      },
+      {
+        "id": 6062200,
+        "name": "黃奕霖"
+      },
+      {
+        "id": 5466567,
+        "name": "黃昱燕"
+      },
+      {
+        "id": 6396902,
+        "name": "張少瞳"
+      },
+      {
+        "id": 6166156,
+        "name": "孟庭筠"
+      },
+      {
+        "id": 6166104,
+        "name": "范姜又恩"
+      },
+      {
+        "id": 6166027,
+        "name": "陳昭霓"
+      },
+      {
+        "id": 6166034,
+        "name": "陳以凌"
+      },
+      {
+        "id": 6166275,
+        "name": "伊品"
+      },
+      {
+        "id": 6166249,
+        "name": "陳穎臻"
+      },
+      {
+        "id": 6166026,
+        "name": "徐沛婠"
+      }
     ]
-}
+  }
