update tp member list

--- a/default_config.json
+++ b/default_config.json
@@ -1,148 +1,150 @@
 {
-    "default_configs": {
-        "check_only": false,
-        "default_folder": "/yter/tp/src/tp/tp stream"
+  "default_configs": {
+    "check_only": false,
+    "default_folder": "/yter/tp/src/tp/tp stream"
+  },
+  "members": [
+    {
+      "id": 3619520,
+      "name": "李佳俐",
+      "prefix": "kuri stream ",
+      "folder": "/yter/tp/src/kuri/kuri stream"
     },
-    "members": [
-      {
-        "id": 3619520,
-        "name": "李佳俐",
-        "enable_notify": true
-      },
-      {
-        "id": 3651219,
-        "name": "李采潔",
-        "enable_notify": true
-      },
-      {
-        "id": 3654414,
-        "name": "AKB48 TeamTP",
-            "enable_notify": true
-      },
-      {
-        "id": 4803750,
-        "name": "浪K歌",
-            "enable_notify": true
-      },
-      {
-        "id": 2028726,
-        "name": "潘姿怡"
-      },
-      {
-        "id": 3686708,
-        "name": "劉曉晴"
-      },
-      {
-        "id": 1398860,
-        "name": "蔡伊柔"
-      },
-      {
-        "id": 3650580,
-        "name": "林倢"
-      },
-      {
-        "id": 3650583,
-        "name": "王逸嘉"
-      },
-      {
-        "id": 3650589,
-        "name": "林易沄"
-      },
-      {
-        "id": 3650734,
-        "name": "蔡亞恩"
-      },
-      {
-        "id": 3650735,
-        "name": "周佳郁"
-      },
-      {
-        "id": 3652550,
-        "name": "陳詩雅"
-      },
-      {
-        "id": 3686709,
-        "name": "張羽翎"
-      },
-      {
-        "id": 3686713,
-        "name": "林于馨"
-      },
-      {
-        "id": 3800370,
-        "name": "董子瑄"
-      },
-      {
-        "id": 4210533,
-        "name": "吳婉淩"
-      },
-      {
-        "id": 4560592,
-        "name": "國興瑀"
-      },
-      {
-        "id": 4663718,
-        "name": "周家安"
-      },
-      {
-        "id": 4663721,
-        "name": "林亭莉"
-      },
-      {
-        "id": 4663722,
-        "name": "翁彤薰"
-      },
-      {
-        "id": 4663724,
-        "name": "宮田留佳"
-      },
-      {
-        "id": 4663738,
-        "name": "袁子筑"
-      },
-      {
-        "id": 5381964,
-        "name": "高硯晨"
-      },
-      {
-        "id": 6062200,
-        "name": "黃奕霖"
-      },
-      {
-        "id": 5466567,
-        "name": "黃昱燕"
-      },
-      {
-        "id": 6396902,
-        "name": "張少瞳"
-      },
-      {
-        "id": 6166156,
-        "name": "孟庭筠"
-      },
-      {
-        "id": 6166104,
-        "name": "范姜又恩"
-      },
-      {
-        "id": 6166027,
-        "name": "陳昭霓"
-      },
-      {
-        "id": 6166034,
-        "name": "陳以凌"
-      },
-      {
-        "id": 6166275,
-        "name": "伊品"
-      },
-      {
-        "id": 6166249,
-        "name": "陳穎臻"
-      },
-      {
-        "id": 6166026,
-        "name": "徐沛婠"
-      }
-    ]
-  }
+    {
+      "id": 3651219,
+      "name": "李采潔",
+      "prefix": "han stream ",
+      "folder": "/yter/tp/src/han/han stream"
+    },
+    {
+      "id": 3654414,
+      "name": "AKB48 TeamTP"
+    },
+    {
+      "id": 4803750,
+      "name": "浪K歌"
+    },
+    {
+      "id": 2028726,
+      "name": "潘姿怡",
+      "prefix": "mina stream ",
+      "folder": "/yter/tp/src/mina/mina stream"
+    },
+    {
+      "id": 3686708,
+      "name": "劉曉晴"
+    },
+    {
+      "id": 1398860,
+      "name": "蔡伊柔"
+    },
+    {
+      "id": 3650580,
+      "name": "林倢"
+    },
+    {
+      "id": 3650583,
+      "name": "王逸嘉"
+    },
+    {
+      "id": 3650589,
+      "name": "林易沄"
+    },
+    {
+      "id": 3650734,
+      "name": "蔡亞恩"
+    },
+    {
+      "id": 3650735,
+      "name": "周佳郁"
+    },
+    {
+      "id": 3652550,
+      "name": "陳詩雅"
+    },
+    {
+      "id": 3686709,
+      "name": "張羽翎"
+    },
+    {
+      "id": 3686713,
+      "name": "林于馨"
+    },
+    {
+      "id": 3800370,
+      "name": "董子瑄"
+    },
+    {
+      "id": 4210533,
+      "name": "吳婉淩"
+    },
+    {
+      "id": 4560592,
+      "name": "國興瑀"
+    },
+    {
+      "id": 4663718,
+      "name": "周家安"
+    },
+    {
+      "id": 4663721,
+      "name": "林亭莉"
+    },
+    {
+      "id": 4663722,
+      "name": "翁彤薰"
+    },
+    {
+      "id": 4663724,
+      "name": "宮田留佳"
+    },
+    {
+      "id": 4663738,
+      "name": "袁子筑"
+    },
+    {
+      "id": 5381964,
+      "name": "高硯晨"
+    },
+    {
+      "id": 6062200,
+      "name": "黃奕霖"
+    },
+    {
+      "id": 5466567,
+      "name": "黃昱燕"
+    },
+    {
+      "id": 6396902,
+      "name": "張少瞳"
+    },
+    {
+      "id": 6166156,
+      "name": "孟庭筠"
+    },
+    {
+      "id": 6166104,
+      "name": "范姜又恩"
+    },
+    {
+      "id": 6166027,
+      "name": "陳昭霓"
+    },
+    {
+      "id": 6166034,
+      "name": "陳以凌"
+    },
+    {
+      "id": 6166275,
+      "name": "伊品"
+    },
+    {
+      "id": 6166249,
+      "name": "陳穎臻"
+    },
+    {
+      "id": 6166026,
+      "name": "徐沛婠"
+    }
+  ]
+}
