update ubuntu version for docker

--- a/default_config.json
+++ b/default_config.json
@@ -6,15 +6,11 @@
   "members": [
     {
       "id": 3619520,
-      "name": "李佳俐",
-      "prefix": "kuri stream ",
-      "folder": "/yter/tp/src/kuri/kuri stream"
+      "name": "李佳俐"
     },
     {
       "id": 3651219,
-      "name": "李采潔",
-      "prefix": "han stream ",
-      "folder": "/yter/tp/src/han/han stream"
+      "name": "李采潔"
     },
     {
       "id": 3654414,
@@ -26,9 +22,7 @@
     },
     {
       "id": 2028726,
-      "name": "潘姿怡",
-      "prefix": "mina stream ",
-      "folder": "/yter/tp/src/mina/mina stream"
+      "name": "潘姿怡"
     },
     {
       "id": 3686708,
