update member list

--- a/default_config.json
+++ b/default_config.json
@@ -139,6 +139,46 @@
     {
       "id": 6166026,
       "name": "徐沛婠"
+    },
+    {
+      "id": 6709485,
+      "name": "唐靜"
+    },
+    {
+      "id": 6572109,
+      "name": "楊亞芸"
+    },
+    {
+      "id": 6709608,
+      "name": "陳泰琌"
+    },
+    {
+      "id": 6708889,
+      "name": "邱宜靚"
+    },
+    {
+      "id": 6708926,
+      "name": "陳嘉儀"
+    },
+    {
+      "id": 6709319,
+      "name": "彭鈺婷"
+    },
+    {
+      "id": 6708969,
+      "name": "陳巧儀"
+    },
+    {
+      "id": 6709372,
+      "name": "余嬿慈"
+    },
+    {
+      "id": 6709696,
+      "name": "蔡喬茵"
+    },
+    {
+      "id": 6709498,
+      "name": "林瑋庭"
     }
   ]
 }
